--- a/src/css/main.css
+++ b/src/css/main.css
@@ -151,7 +151,7 @@ textarea {
 
     50% {
       background: green;
-      border-radius: 50%;
+      transform: scale(.4) rotate(45deg);
     }
 
     100% {
